--- a/index.html
+++ b/index.html
@@ -9,31 +9,34 @@
    
 </head>
 <body>
-    
+
     <!-- begin nav-bar  -->
-    <ul class="nav">
-        <li class="nav-item">
-            <a class="nav-link active" href="index.html">About</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-    </ul>
-    <!-- end nav-bar  -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <ul class="navbar-nav ml-auto" class="position">
+            <li class="nav-item active">
+                <a id="hover" class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item portfolio">
+                <a id="hover" class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item contact">
+                <a id="hover" class="nav-link" href="contact.html">Contact</a>
+            </li>
+        </ul>
+        <h1 id="name">Elizabeth Clohosey</h1>
+    </nav>
+         <!-- end nav-bar  -->
 
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="page-header">
-                    <h1>About Me</h1>
+                    <h2>About Me</h2>
                 </div>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-2">
             <div class="col-3">
                 <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/546231_10150796491064628_1219218878_n.jpg?_nc_cat=103&_nc_oc=AQl9xOD-XwgBeudtE4oqKIjsj9NjdHKN2NryEiGJAfdVlCxZK8fagnhI5PgTWVujF6I&_nc_ht=scontent-atl3-1.xx&oh=ff069ee531af97c90221f7a73d308c57&oe=5DD40D6D" id="about-me-pic" alt="portfolio using bootstrap" height="200px" width="250px">
             </div>
