made everthing responsive - need to work on footer and add try to make about me look better

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <!-- begin nav-bar  -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <ul class="navbar-nav ml-auto" class="position">
             <li class="nav-item active">
@@ -25,11 +26,12 @@
         </ul>
         <h1 id="name">Elizabeth Clohosey</h1>
     </nav>
-         <!-- end nav-bar  -->
+
+    <!-- end nav-bar  -->
 
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-sm-12">
                 <div class="page-header">
                     <h2>About Me</h2>
                 </div>
@@ -37,11 +39,20 @@
         </div>
 
         <div class="row row-2">
-            <div class="col-3">
-                <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/546231_10150796491064628_1219218878_n.jpg?_nc_cat=103&_nc_oc=AQl9xOD-XwgBeudtE4oqKIjsj9NjdHKN2NryEiGJAfdVlCxZK8fagnhI5PgTWVujF6I&_nc_ht=scontent-atl3-1.xx&oh=ff069ee531af97c90221f7a73d308c57&oe=5DD40D6D" id="about-me-pic" alt="portfolio using bootstrap" height="200px" width="250px">
+
+            <div class="col-sm-12 col-lg-4 col-xl-4" class="card" style="width: 18rem;">
+                <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/546231_10150796491064628_1219218878_n.jpg?_nc_cat=103&_nc_oc=AQl9xOD-XwgBeudtE4oqKIjsj9NjdHKN2NryEiGJAfdVlCxZK8fagnhI5PgTWVujF6I&_nc_ht=scontent-atl3-1.xx&oh=ff069ee531af97c90221f7a73d308c57&oe=5DD40D6D" class="card-img-top" alt="...">
+                <div class="card-body">
+                </div>
+
+                <!-- <div class="col-sm-12 col-lg-4 col-xl-4" class="card" style="width: 18rem;">
+                    <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/546231_10150796491064628_1219218878_n.jpg?_nc_cat=103&_nc_oc=AQl9xOD-XwgBeudtE4oqKIjsj9NjdHKN2NryEiGJAfdVlCxZK8fagnhI5PgTWVujF6I&_nc_ht=scontent-atl3-1.xx&oh=ff069ee531af97c90221f7a73d308c57&oe=5DD40D6D" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    </div>
+                </div> -->
             </div>
 
-            <div class="col-9">
+            <div class="col-sm-12 col-lg-8 col-xl-8">
                 <p>
                     I have no idea what to write here just yet, so here's some 
                     Harry Potter Ipsum for your enjoyment.  Prefect’s bathroom 
