--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
             </div>
         </div>
 
-        <div class="row row-2">
+        <div class="row">
 
             <div class="col-sm-12 col-lg-4 col-xl-4" class="card" style="width: 18rem;">
-                <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/546231_10150796491064628_1219218878_n.jpg?_nc_cat=103&_nc_oc=AQl9xOD-XwgBeudtE4oqKIjsj9NjdHKN2NryEiGJAfdVlCxZK8fagnhI5PgTWVujF6I&_nc_ht=scontent-atl3-1.xx&oh=ff069ee531af97c90221f7a73d308c57&oe=5DD40D6D" class="card-img-top" alt="...">
+                <img id="dog-image" src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/65576755_10157400169079628_5758991037250928640_n.jpg?_nc_cat=101&_nc_oc=AQnPf2babjppvpbNuNcROr-ZgnIAMLmlMyTNpkKGwDoKCEHwt0bWzf3NfDbvFcihE_M&_nc_ht=scontent-atl3-1.xx&oh=c5e0b1e2a29413352d6a6b9c264b8d2c&oe=5DE5BFA9" class="card-img-top" alt="...">
                 <div class="card-body">
                 </div>
 
-                <!-- <div class="col-sm-12 col-lg-4 col-xl-4" class="card" style="width: 18rem;">
+                <div class="col-12" class="card" style="width: 18rem;">
                     <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/546231_10150796491064628_1219218878_n.jpg?_nc_cat=103&_nc_oc=AQl9xOD-XwgBeudtE4oqKIjsj9NjdHKN2NryEiGJAfdVlCxZK8fagnhI5PgTWVujF6I&_nc_ht=scontent-atl3-1.xx&oh=ff069ee531af97c90221f7a73d308c57&oe=5DD40D6D" class="card-img-top" alt="...">
                     <div class="card-body">
                     </div>
-                </div> -->
+                </div>
             </div>
-
+           
             <div class="col-sm-12 col-lg-8 col-xl-8">
                 <p>
                     I have no idea what to write here just yet, so here's some 
